# End-to-end-mlops

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  push.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yaml
configs/: deployment.yaml  gcp.yaml  monitor.yaml  training.yaml  validation.yaml
data/: .gitignore  Amravati_merged.csv.dvc  cleaned.txt.dvc
deploy/: vertex_ai.py
loggings/: logger.py
monitoring/: drift_detector.py
serve/: app.py
src/: loan_pipeline.py
src/components/: data_validation.py  evaluate.py  ingestion.py  preprocess.py  train.py
src/utils/: config_loader.py
tests/: conftest.py  test_api.py  test_evaluate.py  test_preprocess.py  test_train.py
training/: cleaning.ipynb
